# CortexaDB

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  KNOWN_LIMITATIONS.md  README.md  ROADMAP.md  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: release.yml  rust.yml
benchmark/: README.md  cortexadb_runner.py
crates/agentlite-core/: Cargo.toml
crates/agentlite-core/src/: facade.rs  lib.rs  store.rs
crates/agentlite-core/src/index/: mod.rs
crates/agentlite-core/src/query/: hybrid.rs
crates/agentlite-core/src/storage/: segment.rs
crates/agentlite-py/: Cargo.toml  pyproject.toml  test_smoke.py  test_stress.py
crates/agentlite-py/agentlite/: __init__.py  chunker.py  client.py  embedder.py  replay.py
crates/agentlite-py/agentlite/providers/: __init__.py  gemini.py  ollama.py  openai.py
crates/agentlite-py/src/: lib.rs
crates/cortexadb-core/: Cargo.toml
crates/cortexadb-core/benches/: storage_bench.rs
crates/cortexadb-core/src/: chunker.rs  engine.rs  facade.rs  lib.rs  store.rs
crates/cortexadb-core/src/core/: command.rs  memory_entry.rs  state_machine.rs
crates/cortexadb-core/src/index/: combined.rs  graph.rs  hnsw.rs  mod.rs  temporal.rs  vector.rs
crates/cortexadb-core/src/query/: executor.rs  hybrid.rs  intent.rs  mod.rs
crates/cortexadb-core/src/storage/: checkpoint.rs  compaction.rs  segment.rs  serialization.rs  wal.rs
crates/cortexadb-core/tests/: integration.rs
crates/cortexadb-py/: Cargo.toml  pyproject.toml  test_smoke.py  test_stress.py
crates/cortexadb-py/cortexadb/: __init__.py  chunker.py  client.py  embedder.py  loader.py  replay.py
crates/cortexadb-py/cortexadb/providers/: gemini.py  ollama.py  openai.py
crates/cortexadb-py/src/: lib.rs
crates/mnemos-core/: Cargo.toml
crates/mnemos-core/src/: engine.rs  facade.rs  lib.rs  store.rs
crates/mnemos-core/src/core/: state_machine.rs
crates/mnemos-core/src/query/: executor.rs  intent.rs
crates/mnemos-core/src/storage/: mod.rs  serialization.rs  wal.rs
crates/mnemos-py/: .gitignore  Cargo.toml  pyproject.toml  test_smoke.py  test_stress.py
crates/mnemos-py/mnemos/: __init__.py  chunker.py  client.py  embedder.py  replay.py
crates/mnemos-py/mnemos/providers/: __init__.py  gemini.py  ollama.py  openai.py
crates/mnemos-py/src/: lib.rs
docs/: index.md  package.json  source.config.ts
docs/api/: python.md  rust.md
docs/app/: global.css
docs/app/(home)/: layout.tsx  page.tsx
docs/app/api/stats/: route.ts
docs/app/docs/[[...slug]]/: page.tsx
docs/components/: code-preview.tsx
docs/content/docs/: index.mdx  meta.json
docs/content/docs/api/: meta.json  python.mdx  rust.mdx
docs/content/docs/getting-started/: quickstart.mdx
docs/content/docs/guides/: chunking.mdx  collections.mdx  core-concepts.mdx  embedders.mdx  indexing.mdx  meta.json  namespaces.mdx  query-engine.mdx  replay.mdx  storage-engine.mdx
docs/content/docs/resources/: benchmarks.mdx  examples.mdx  meta.json
docs/getting-started/: quickstart.md
docs/guides/: chunking.md  collections.md  core-concepts.md  embedders.md  namespaces.md  query-engine.md  replay.md
docs/lib/: github.ts  layout.shared.tsx
docs/resources/: benchmarks.md  examples.md
examples/python/: basic_usage.py
examples/rust/: basic_usage.rs
proto/: mnemos.proto
python/: .gitignore
python/mnemos-client/: README.md  pyproject.toml
python/mnemos-client/examples/: basic_usage.py  simple_memory.py
python/mnemos-client/scripts/: generate_proto.sh
python/mnemos-client/src/mnemos_client/: __init__.py  client.py  embedders.py  memory.py  types.py
python/mnemos-client/src/mnemos_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/mnemos-client/src/mnemos_client/proto/: __init__.py  mnemos_pb2.py  mnemos_pb2_grpc.py
scripts/: monkey_recovery.sh  run_grpc.sh
src/: engine.rs  lib.rs  store.rs
src/core/: command.rs  memory_entry.rs  mod.rs  state_machine.rs
src/index/: combined.rs  graph.rs  mod.rs  temporal.rs  vector.rs
src/query/: executor.rs  hybrid.rs  mod.rs  planner.rs
src/service/: grpc.rs
src/storage/: checkpoint.rs  compaction.rs  mod.rs  segment.rs  wal.rs
