[package]
name = "mnemos"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
rayon = "1.7"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crc = "3.0"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
