[package]
name = "cortexadb-core"
version = "0.1.8"
edition = "2021"
authors = ["Anas Limem <limemanas0@gmail.com>"]
description = "Fast, embedded vector + graph memory for AI agents"
repository = "https://github.com/anaslimem/CortexaDB"
license = "MIT OR Apache-2.0"
readme = "../../README.md"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.7"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crc = "3.0"
arc-swap = "1.8.2"
regex = "1.10"
serde_json = "1.0"
usearch = { version = "2.24.0", features = ["simsimd"] }
log = "0.4"


[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
serial_test = "3.0"
