[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "mnemos"
version = "0.1.0"
requires-python = ">=3.9"
description = "Fast, embedded vector + graph memory for AI agents"
license = { text = "GPL-3.0" }

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mnemos._mnemos"
